--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -332,3 +332,15 @@ table .totals .zero {
   margin-bottom: 20px;
   font-size: 1.5em;
 }
+
+a.more {
+  color: #999;
+  text-decoration: none;
+  font-size: 0.8em;
+  margin-left: 30px; 
+}
+
+a.more:hover {
+  text-decoration: underline;
+  color: #777;
+}
