--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -56,7 +56,7 @@
     = link_to 'more things...', things_path, :class => 'more'
 
   #global_totals
-    %h3.add_up= "How all #{User.count} of our edotters add up"
+    %h3.add_up= "How all #{User.count} of our edotters add up:"
 
     %ul.plain.categories
       %table
