--- a/public/stylesheets/iphone.css
+++ b/public/stylesheets/iphone.css
@@ -14,7 +14,7 @@ h1 {
   margin-right: auto;
 }
 
-#login {
+#catchphrase #login {
   width: 260px;
   margin-bottom: 20px;
 }
@@ -34,7 +34,7 @@ h1 {
 
 #header li {
  padding-right: 3px;
- padding-left: 5px;
+ padding-left: 7px;
  border-right: 1px solid #ddd;
 }
 
@@ -51,13 +51,20 @@ h1 {
 
 label {
   font-size: 1.5em;
+  margin-bottom: -20px;
 }
 
 input {
-  font-size: 2em;
+  font-size: 1.8em;
   padding: 5px;
   display: block;
   width: 250px;
+}
+
+input[type=submit] {
+  font-size: 1.2em;
+  width: 100%;
+  margin-top: 15px;
 }
 
 label {
