--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,17 @@
 <h1>Sign up as a new user</h1>
 <% @user.password = @user.password_confirmation = nil %>
 
-<p class="twitter_login">
-  <%= link_to 'Sign up with your Twitter account', twitter_login_path %>
+<p class="option_list">
+  <div class="option_number">Option #1</div>
+  <div class="option_title"><%= link_to 'Sign up with your Twitter account', twitter_login_path %></div>
+  <div class="option_note">Don't worry!  We <b>won't</b> post to Twitter unless <b>you</b> tell us to, and we never see your Twitter password (<a href="http://help.twitter.com/entries/76052-how-to-connect-to-third-party-applications">learn more</a>)</div>
 </p>
 
-<p>...or create an account just for Every Day One Thing.</p>
-
+<p class="option_list">
+  <div class="option_number">Option #2</div>
+  <div class="option_title">Create an account just for Every Day One Thing.</div>
+  <div class="option_note">The old-fashioned method.  Note, we don't yet have a way to tie your Twitter account to Every Day One Thing after you sign up, so be sure to use Option #1 if you want to use this site with Twitter!</div>
+  <div class="option_body">
 <%= error_messages_for :user %>
 <% form_for :user, :url => users_path do |f| -%>
 <p><%= label_tag 'login' %><br/>
@@ -22,4 +27,6 @@
 <%= f.password_field :password_confirmation %></p>
 
 <p><%= submit_tag 'Sign up' %></p>
+</div>
+</p>
 <% end -%>
