creating new subcategories should work now. pulling delete links, too.

--- a/app/views/subcategories/new.haml
+++ b/app/views/subcategories/new.haml
@@ -3,5 +3,6 @@
   = @category.name
   
 - semantic_form_for @subcategory do |f|
+  = hidden_field_tag 'category_id', @category.id
   = f.inputs
   = f.buttons
