Some html cleanup + link to admin interface for admins

--- a/app/views/admin/index.haml
+++ b/app/views/admin/index.haml
@@ -2,9 +2,10 @@
 
 
 :markdown
-  Welcome to the admin interface. [Enjoy!](http://trololololololololololo.com/)
-  
+  Welcome to the admin interface. 
+
   * [Category editor](/categories)
-  * Data dump
-    * [.xls format](/admin/report/xls)
+  * Reports
+    * [edot-report.xls](/admin/report/xls)
+  * [Training video](http://trololololololololololo.com/)
 
