switching from 'points' to 'dots' and fixing pluralization in a few spots

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -28,7 +28,7 @@
   #me
     #my_feed
     
-      %p= "You've done #{pluralize(current_user.things.count, 'thing')} and earned #{pluralize(current_user.points,'point')}!"
+      %p= "You've done #{pluralize(current_user.things.count, 'thing')} and earned #{pluralize(current_user.points,'dot')}!"
 
       %h3 Recent things I did
       
