--- a/app/views/home/top.haml
+++ b/app/views/home/top.haml
@@ -2,4 +2,4 @@
 
 %ol#top_users
   - @top_users.each do |u|
-    %li= "#{link_to u.login, u} (#{u.points} pts)"
+    %li= "#{link_to u.login, u} (#{u.points} dots)"
