--- a/app/views/users/show.haml
+++ b/app/views/users/show.haml
@@ -1,6 +1,6 @@
 %h2= "#{@user.login}'s page"
 
 %p
-  = "#{@user.login} has done #{pluralize(@user.things.count, 'thing')} and earned #{pluralize(@user.points,'point')}!"
+  = "#{@user.login} has done #{pluralize(@user.things.count, 'thing')} and earned #{pluralize(@user.points,'dot')}!"
   
   = render :partial => 'things/thing', :collection => @user.things
