--- a/app/views/static/about.haml
+++ b/app/views/static/about.haml
@@ -11,14 +11,22 @@
     To change the world one thing at a time!
 
     <h2>Who We Are</h2>
+    
+    ### The Daily Grinders
 
     <img src="/images/leah.jpg" align="left" class="images"/><b>Leah “Idea” Swindon</b>: Every Day One Thing, or <b>edot</b>, has been brewing in Leah’s head and waiting to come to life.  After a 90 second pitch at Seattle Start-up Weekend, a team of developers, designers, and marketing peeps came together to create a place where all of us who love checking in can post our socially conscious status and see the global impact! For her day job, Leah is the Marketing and Communications Director for the Bread of Life Mission in Pioneer Square, Seattle. Twitter <a href="http://twitter.com/leahswindon">@leahswindon</a>
 
     <img src="/images/jesse.jpg" align="left" class="images"/><b>Jesse “Rails” Kriss</b>: The edot Ruby on Rails expert, Jesse lives, works and drinks his coffee in Seattle, WA. His long-standing interest in music and technology has taken him from fiddling with MIDI in middle school to ditching a Computer Science degree for Music Composition at Carleton College, to following an interest in music performance interface design to Carnegie Mellon's Human-Computer Interaction Institute. You can usually find him plugging away in the virtual Figure 53 offices. (The coffee cup in his hand is reusable.) Twitter <a href="http://twitter.com/jkriss">@jkriss</a>
 
-    <img src="/images/rob.jpg" align="left" class="images"/><b>Rob “N.A.M.P” Lanphier</b>: Rob is Not A Morning Person, but he is a brilliant developer. He joins the edot team as a software developer and community manager, formerly at Linden Lab (makers of Second Life) and RealNetworks.  He is currently working on various open source projects (latest work is <a href="http://robla.net/jsonwidget">jsonwidget</a>)
-
     <img src="/images/ryan.jpg" align="left" class="images"/><b>Ryan “Tigger” Kyle</b>: Ryan Kyle is prone to random vertical jumping when things go well and brings amazing energy to the edot team. Ryan has been using computers since he was 1½  years old, and he started his company, <a href="http://www.concordmfg.com/">Concord Mfg LLC</a> when he was 19.  He is a programmer at heart (.net and Microsoft Stock) with the mind of an engineer. In his spare time, he is an avid swing dancer, karaoke singer and chess player.
+
+
+    ## Our Board of Directors
+    
+    <img src="images/heather.png" align="left" class="images"/>
+    <b>Heather &#8220;Creatively Mashed&#8221; Bansemer</b>:  Heather joins <strong>edot</strong> with copy writing and social media background that has both analytical and social strengths.  Her day job keeps her busy at Bullseye Creative, and after hours you can find her tweeting, retweeting and blogging.  As a Social Media Maven, Heather&#8217;s writing covers several genres, from tips and tricks for small businesses to brilliant bursts of poetry.  In her spare time, she volunteers with local rescue missions, food banks, and other community areas of need. She lives with her three daughters in Edmonds, WA and writes on her blog, <a href="http://creativelymashed.wordpress.com/" target="_blank">Creatively Mashed</a>.
+    
+    <img src="/images/rob.jpg" align="left" class="images"/><b>Rob “N.A.M.P” Lanphier</b>: Rob is Not A Morning Person, but he is a brilliant developer. He joins the edot team as a software developer and community manager, formerly at Linden Lab (makers of Second Life) and RealNetworks.  He is currently working on various open source projects (latest work is <a href="http://robla.net/jsonwidget">jsonwidget</a>)
 
     <img src="/images/dave.jpg" align="left" class="images"/><b>Dave “Bing” Rigotti</b>: Dave gets his Bing on at Microsoft and likes online marketing (search and social), entrepreneurship, a good steak, and the outdoors. His social media skills have brought people and attention to the edot site. Twitter <a href="http://twitter.com/drigotti">@drigotti</a> or visit his blog at <a href="http://daverigotti.com">http://daverigotti.com</a>.
 
