adding email and twitter links to top page

--- a/app/views/home/top.haml
+++ b/app/views/home/top.haml
@@ -2,4 +2,10 @@
 
 %ol#top_users
   - @top_users.each do |u|
-    %li= "#{link_to u.login, u} (#{u.points} dots)"
+    %li
+      = "#{link_to u.login, u} (#{u.points} dots)"
+      %span.contact
+        - if u.twitter_id
+          = link_to 'twitter', "http://twitter.com/#{u.login}"
+        - if u.email
+          = link_to 'email', "mailto:#{u.email}"
