--- a/app/views/home/top.haml
+++ b/app/views/home/top.haml
@@ -4,7 +4,7 @@
   - @top_users.each do |u|
     %li
       = "#{link_to u.login, u} (#{u.points} dots)"
-      - if logged_in? && current_user.admin?
+      - if logged_in? && current_user.is_admin?
         %span.contact
           - if u.twitter_id
             = link_to 'twitter', "http://twitter.com/#{u.login}"
