--- a/app/views/things/_thing.haml
+++ b/app/views/things/_thing.haml
@@ -1,6 +1,6 @@
 - cdate = local(thing.created_at).strftime("%B %d, %I:%M %p")
 %div.userThings
-  %div.userComment
+  .userComment
     %blockquote
       %p
         = avatar(thing.user, 25)
