--- a/app/views/thing_comments/_comments.haml
+++ b/app/views/thing_comments/_comments.haml
@@ -2,27 +2,29 @@
 - new_comment = @thing.comments.new
 %a{ :name => 'comments' }
 #comments
-
-  - if comments.count == 0
-    No comments, yet. Be the first!
-  - else
-    = pluralize @thing.comments.count, 'Comment'
   
   %ul.comments
     - comments.each do |comment|
       .comment
         .content
+          = avatar(comment.user, 15)
           = comment.comment
-        - if logged_in? && comment.user == current_user
-          .delete
-            = link_to 'x', thing_thing_comment_path(@thing, comment), :method => :delete, :confirm => "Are you sure you want to delete your comment?"
+          %cite
+            = link_to_user comment.user
+            at
+            = format(comment.created_at)
+          
+            - if logged_in? && comment.user == current_user
+              .delete
+                = link_to 'x', thing_thing_comment_path(@thing, comment), :method => :delete, :confirm => "Are you sure you want to delete your comment?"
           
   
 #comment_form
   - if logged_in?
     - semantic_form_for new_comment, :url => thing_thing_comments_path(@thing) do |f|
-      = f.input :comment
+      = f.input :comment, :label => '', :input_html => { :class => 'thing_text' }
       - f.buttons do
-        = f.commit_button :label => 'Post your comment'
+        = f.commit_button :label => 'Add your comment!', :button_html => { :class => 'awesome' }
   - else
-    Please log in to comment
+    #log_in_to_comment
+      = "If you #{link_to 'log in', login_path}, you can leave a comment."
