--- a/app/views/thing_comments/_comments.haml
+++ b/app/views/thing_comments/_comments.haml
@@ -9,14 +9,14 @@
         .content
           = avatar(comment.user, 15)
           = comment.comment
-          %cite
-            = link_to_user comment.user
-            at
-            = format(comment.created_at)
-          
-            - if logged_in? && comment.user == current_user
-              .delete
-                = link_to 'x', thing_thing_comment_path(@thing, comment), :method => :delete, :confirm => "Are you sure you want to delete your comment?"
+        %cite
+          = link_to_user comment.user
+          at
+          = format(comment.created_at)
+        
+          - if logged_in? && comment.user == current_user
+            %span.delete
+              = link_to 'x', thing_thing_comment_path(@thing, comment), :method => :delete, :confirm => "Are you sure you want to delete your comment?"
           
 #comment_form
   - if logged_in?
