added rounded comment corners for safari

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -449,6 +449,7 @@ a.comment_img{
   background: #fff;
   border: 1px solid #ccc;
   -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
   padding: 5px;
   width: auto;
 }
