making comment form styles closer to the comments themselves

--- a/app/views/thing_comments/_comments.haml
+++ b/app/views/thing_comments/_comments.haml
@@ -27,4 +27,4 @@
         = f.commit_button :label => 'Add your comment!', :button_html => { :class => 'awesome' }
   - else
     #log_in_to_comment
-      = "If you #{link_to 'log in', login_path}, you can leave a comment."
+      = "#{link_to 'Log in', login_path} to leave a comment."
