--- a/app/views/thing_comments/_comments.haml
+++ b/app/views/thing_comments/_comments.haml
@@ -14,7 +14,7 @@
           at
           = format(comment.created_at)
         
-          - if logged_in? && comment.user == current_user
+          - if logged_in? && (comment.user == current_user || @thing.user == current_user)
             %span.delete
               = link_to 'x', thing_thing_comment_path(@thing, comment), :method => :delete, :confirm => "Are you sure you want to delete your comment?"
           
