--- a/app/views/things/_thing.haml
+++ b/app/views/things/_thing.haml
@@ -26,3 +26,8 @@
       \-
       = link_to "add a comment", thing_path(thing, :anchor => 'comments')
       = link_to image_tag('tiny-comment.png'), thing_path(thing, :anchor => 'comments'), :class => 'comment_img'
+    - else
+      - if logged_in? && thing.user == current_user
+        %span.delete
+          = link_to 'x', thing, :method => :delete, :confirm => "Are you sure you want to delete this thing?"
+
