--- a/app/views/things/_new_thing.haml
+++ b/app/views/things/_new_thing.haml
@@ -9,7 +9,7 @@
         %option{ :disabled => true, :selected => true, :value => "" } &mdash; please select a thing &mdash;
         - if current_user.recent_subcategories.count > 0
           %optgroup{ :label => "Your recent categories"}
-            - current_user.recent_subcategories.each do |sub|
+            - current_user.recent_subcategories.uniq.each do |sub|
               %option{ :value => sub.id }=  "#{sub.categories.first.name} - #{sub.name} #{pluralize(sub.points, 'dot')}"
         - @categories.each do |cat|
           %optgroup{ :label => cat.name }
